<resources>
    <string name="app_name" translatable="false">Newsleak</string>

    <string name="description">Anton has been developing information systems based on 1C since 2012.
        Nowadays, he is lead developer of document management system at Samolet Development.
        Anton has 11 certificates for standard solutions 1C.</string>

    <string name="email_address" translatable="false">a.petronenko@gmail.com</string>
    <string name="email_subject">Hello, Anton!</string>
    <string name="warning_empty_message">Please enter your message</string>
    <string name="error_no_email_app">No Email apps were found.</string>
    <string name="error_no_browser_app">No browser apps were found.</string>
    <string name="input_hint">Enter message…</string>
    <string name="preview_action_email">Send message</string>
    <string name="position">1c team lead</string>
    <string name="disclaimer" translatable="false">© 2018 Petronenko</string>

    <string name="about_title">Author</string>
    <string name="menu_action_about">About</string>

    <string name="state_loading_msg_error">Error loading news. Tap to retry</string>
    <string name="state_loading_msg_no_data">There is no data</string>
    <string name="error_action_retry">Retry</string>

    <string name="news_details_menu_action_delete">Delete</string>
    <string name="news_details_menu_action_edit">Edit</string>

    <string name="news_edit_title">Editor</string>
    <string name="news_edit_menu_action_save">Save</string>
    <string name="news_edit_tv_title_text">Title</string>
    <string name="news_edit_et_title_hint">Enter news title</string>
    <string name="news_edit_tv_preview_text">Preview</string>
    <string name="news_edit_et_preview_hint">Enter news preview</string>
    <string name="news_edit_tv_url_text" translatable="false">Url</string>
    <string name="news_edit_et_url_hint">Enter news url</string>
    <string name="news_edit_tv_url_photo_text">Url photo</string>
    <string name="news_edit_et_url_photo_hint">Enter news photo url</string>
    <string name="news_edit_tv_published_date_text">Published date</string>

    <string name="intro_action_skip">Skip</string>
    <string name="intro_action_next">Next</string>
    <string name="intro_action_done">Got it!</string>
    <string name="intro_greeting">Welcome!</string>

    <string name="news_update_channel_name" translatable="false">NY Times</string>
    <string name="news_update_channel_description">Background service</string>
    <string name="news_update_notification_text">Background service</string>
    <string name="service_action_cancel">Cancel</string>
    <string name="service_result_success">News has been successfully updated</string>
    <string name="service_result_fail">An error occurred while updating the news</string>


</resources>