<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_key_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_size"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_company_logo"
            android:layout_width="@dimen/company_logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_size"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/position"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/ll_key_info"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_half_size"
        android:orientation="vertical">

        <View style="@style/Separator" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_half_size"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_marginTop="@dimen/space_half_size"
            android:text="@string/description"
            android:textSize="@dimen/text_size" />

        <View style="@style/Separator" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/ll_description"
        android:layout_marginBottom="@dimen/space_half_size"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_half_size"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_weight="1"
            android:elegantTextHeight="false"
            android:ems="10"
            android:hint="@string/input_hint"
            android:inputType="textEmailAddress|textMultiLine"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/btn_email"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/preview_action_email"
            android:textColor="@color/colorCorporate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_feedback"
        android:layout_marginEnd="@dimen/space_size"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_logo_vk"
            android:layout_width="0dp"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/space_half_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_vk_logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="TextView" />-->

</RelativeLayout>