<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/about_ll_key_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_size"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_tv_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/space_half_size"
            android:drawableStart="@drawable/logo"
            android:text="@string/position"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_ll_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/about_ll_key_info"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_half_size"
        android:orientation="vertical">

        <View
            style="@style/Separator"
            android:layout_marginStart="@dimen/margin_indent" />

        <TextView
            android:id="@+id/about_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_half_size"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_marginTop="@dimen/space_half_size"
            android:text="@string/description"
            android:textSize="@dimen/text_size" />

        <View
            style="@style/Separator"
            android:layout_marginStart="@dimen/margin_indent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/about_ll_description"
        android:layout_marginBottom="@dimen/space_half_size"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_half_size"
        android:orientation="vertical">

        <EditText
            android:id="@+id/about_et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_indent"
            android:layout_weight="1"
            android:elegantTextHeight="false"
            android:ems="10"
            android:hint="@string/input_hint"
            android:inputType="textEmailAddress|textMultiLine"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/about_btn_email"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/preview_action_email"
            android:textColor="@color/colorCorporate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_ll_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_ll_feedback"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/space_size"
        android:layout_marginTop="@dimen/space_half_size"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/about_iv_vk_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginEnd="@dimen/space_size"
            android:layout_marginStart="@dimen/space_half_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_vk_logo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/about_iv_telegram_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginEnd="@dimen/space_size"
            android:layout_marginStart="@dimen/space_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_telegram_logo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/about_iv_github_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginEnd="@dimen/space_size"
            android:layout_marginStart="@dimen/space_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_github_logo"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</RelativeLayout>